name:                unixtime
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
category:            Util
build-type:          Simple
cabal-version:       >=1.10

executable unixtime
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base ==4.*
                     , bytestring
                     , safe
                     , unix-time
